[package]
name = "executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../../crates/common" }
alloy.workspace = true
hypersync-client.workspace = true
tokio.workspace = true
serde_json.workspace=true
env_logger = "0.11.8"
dotenvy = "0.15.7"

[lints]
workspace = true
