[package]
name = "executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
common = { path = "../../crates/common" }
alloy.workspace = true
hypersync-client.workspace = true
tokio.workspace = true
serde_json.workspace=true
env_logger.workspace = true
dotenvy.workspace = true

[lints]
workspace = true
